# MOSautoIrrigator

./: CMakeLists.txt  Konewka.c  ssd1680.h
Konewka/: CMakeLists.txt  Konewka.c  app_konewka.c  bsp_konewka.c  bsp_konewka.h
Wyswietlacz/: CMakeLists.txt  Wyswietlacz.c  app_display.c  bsp_display.c  bsp_display.h  lwipopts.h  ssd1680.c  ssd1680.h  tempCodeRunnerFile.c  text_renderer  text_renderer.c  text_renderer.h
